<resources>
    <string name="app_name">CopyText</string>
    <string name="channel_name">CopyTextNotificationChannel</string>
    <string name="channel_description">Delivers notification on when the app\'s clipboard service is working or not.</string>
    <string name="notification_content">Copied text will be saved in the app</string>
    <string name="notification_title">CopyText is running in the background</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="item_selected_bg_color">#BDBDBD</string>
    <string name="item_selected_text_color">#424242</string>
    <string name="action_selected_one">Selected</string>
    <string name="action_selected_many">"Selected "</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="add_new_folder">Add new folder</string>
    <string name="add">Add</string>
    <string name="search_clips">search clips</string>
    <string name="search_hint">Search string…</string>
    <string name="delete_tite">Do you want to delete this folder?</string>
    <string name="delete_msg">Deleting this folder will permanently delete all the notes within the folder.</string>
    <string name="delete">Delete</string>
    <string name="rename_folder_title">Rename folder</string>
    <string name="rename">Rename</string>
    <string name="empty_input">Empty input!</string>
    <string name="hint_add_string">Add folder name</string>
    <string name="add_folder_name">Add folder name</string>
    <string name="new_folder">New Folder</string>
    <string name="today">today</string>
    <string name="clear">Clear</string>
    <string name="note_updated">Note updated</string>
    <string name="note_added">"Note inserted "</string>
    <string name="recent_copied_text">Recent copied text will show here \nSwipe left to delete a clip \nTap once to expand clip
    \nLong press to select single\\multiple clips</string>
    <string name="undo">Undo</string>
    <string name="email_id">abhisheksubba.py@gmail.com</string>
    <string name="empty_list">No recent copied text</string>

    <string name="folders">All \nFolders</string>
    <string name="folder_exists">Folder of this name already exits</string>
    <string name="guide">Guide</string>
    <string name="title">Issue</string>
    <string name="issue_description">Description…</string>
    <string name="report">Report an issue</string>
    <string name="send">Send</string>
    <string name="email">example@example.com</string>
    <string name="report_an_issue">Report An Issue</string>
    <string name="send_report">Send report</string>
    <string name="report_icon">Report icon</string>
    <string name="empty_textfield">"Please fill all text fields. "</string>
</resources>