<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/rounded_corner_top">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lg_blue_500">
        <TextView
            android:id="@+id/dialog_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="22sp"
            android:text="@string/rename_folder_title"
            android:textColor="@color/white"
            android:layout_marginBottom="8dp"
            android:padding="8dp"/>

    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_add_string"
        android:padding="8dp"
        app:hintTextColor="@color/lg_blue_500"
        app:boxStrokeColor="@color/lg_blue_500"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rename_folder_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@drawable/color_cursor"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:padding="8dp">
        <Button
            android:id="@+id/cancel_dialog_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/lg_blue_500"
            android:text="@string/cancel"
            android:layout_marginRight="16dp"/>

        <Button
            android:id="@+id/positive_dialog_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lg_blue_500"
            android:textColor="@color/white"
            android:text="@string/rename"
            />
    </LinearLayout>

</LinearLayout>